# madato

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.linux  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE.md  appveyor.yml  pyproject.toml
.github/: rust-build-release.yml.disabled
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_test.yml  publish.yml  python-build-release.yml  rust-build-publish.yml  rust-build-release.yml
assets/: markdown-table-maker.js
doc/: notes.md  python.md
examples/: sample_notebook.ipynb
madato/: Cargo.toml  README.md
madato/src/: csv.rs  lib.rs  types.rs  utils.rs  yaml.rs
madato_cal/: Cargo.toml  README.md
madato_cal/src/: error.rs  lib.rs
madato_cmd/: Cargo.toml
madato_cmd/src/: main.rs
madato_js/: Cargo.toml  Makefile
madato_js/src/: lib.rs
madato_py/: Cargo.toml  Makefile  README.md  pyproject.toml
madato_py/examples/: sample_notebook.ipynb
madato_py/pysource/madato/: __init__.py
madato_py/python/madato/: __init__.py
madato_py/src/: lib.rs
madato_py/tests/: conftest.py  test_yaml.py
madato_wasm/: Cargo.toml  Dockerfile  Makefile  package.json
madato_wasm/spec/: basic_spec.js
madato_wasm/spec/support/: jasmine.json
madato_wasm/test/www-sample/: index.html  package.json  test.yml
pysource/madato/: __init__.py  madato.pyi
pysource/tests/: test_csv.py  test_xlsx.py
src/: csv.rs  excel.rs  lib.rs  main.rs  py.rs  types.rs  utils.rs  yaml.rs
src/cal/: error.rs  mod.rs
test/: potatoes.csv  sample_multi_sheet.xlsx  sample_potatoes.md  test.json
test/www-sample/: index.js
www-sample/: index.js  package.json
