[package]
name = "madato"
version = "0.5.0"
authors = ["Ramon Buckland <ramon.buckland@inosion.com>"]
exclude = [
    "doc/*",
    "assets/*",
    "test/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "madato"

[dependencies]
wasm-bindgen    = "0.2"
regex           = "1"
serde           = "1.0"
serde_derive    = "1.0"
serde_yaml      = "0.7.5"
indexmap        = "1.0.1"
docopt          = "1.0.0"
calamine        = "0.14"

[dependencies.linked-hash-map]
version = "0.5.1"
features = ["serde_impl"]
