[workspace]
members = [
    # Core library that renders markdown tables
    "madato",

    # wasm bindings that uses the core library
    "madato_js",

    # extras support for extracting from XLS and ODS files
    "madato_cal",

    # binary command line of madato and madato_cal
    "madato_cmd",
]
