[package]
name = "madato"
version = "0.7.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
license = "MIT/Apache-2.0"
description = "A library and command line tool for reading and writing tabular data (XLS, ODS, CSV, YAML), and Markdown"
readme = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown", "excel", "yaml", "tables", "openoffice", "csv", "json"]
edition = "2021"
exclude = ["doc/*", "assets/*", "test/*"]

[features]
default = ["cli"]
spreadsheets = ["dep:calamine"]
python = ["dep:pyo3", "dep:pythonize"]
cli = ["spreadsheets", "dep:docopt"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "madato"

[dependencies]
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
indexmap = "1.0.1"
csv = "1.3.0"
thiserror = "1.0.59"
docopt = { version = "1.0.0", optional = true }
calamine = { version = "0.24", optional = true }
pyo3 = { version = "0.21.2", features = [
    "extension-module",
    "generate-import-lib",
], optional = true }
pythonize = { version = "0.21.1", optional = true }


[dependencies.linked-hash-map]
version = "0.5.1"
features = ["serde_impl"]

[dev-dependencies]
tempfile = "3.10.1"

[tool.maturin]
# Build artifacts with the specified Cargo profile
profile = "release"
# List of features to activate
features = ["python"]