[package]
name = "madato"
version = "0.6.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
license = "MIT/Apache-2.0"
description = "A library and command line tool for working tabular data (XLS, ODS, CSV, YAML), and Markdown"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice","csv"]
edition = "2021"
exclude = [
    "doc/*",
    "assets/*",
    "test/*",
]

[lib]
crate-type = ["rlib"]

[dependencies]
regex           = "1"
serde           = "1.0"
serde_derive    = "1.0"
serde_yaml      = "0.8"
serde_json      = "1.0"
indexmap        = "1.0.1"
csv = "1.3.0"

[dependencies.linked-hash-map]
version = "0.5.1"
features = ["serde_impl"]

[dev-dependencies]
tempfile = "3.10.1"
