[package]
name = "madato_cal"
version = "0.5.3"
authors = ["Ramon Buckland <ramon.buckland@inosion.com>"]
license = "MIT/Apache-2.0"
description = "XLS, ODS Support for the madato lib and command line"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice"]
include = [ "src/lib.js", "Cargo.toml" ]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
madato          = "0.5.3"
calamine        = "0.14"
