[package]
name = "madato_cal"
version = "0.5.4"
authors = ["Ramon Buckland <ramon.buckland@inosion.com>"]
license = "MIT/Apache-2.0"
description = "XLS, ODS Support for the madato lib and command line"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice"]
include = [ "src/lib.js", "Cargo.toml" ]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
madato          = { path = "../madato/" }
calamine        = "0.18"
