[package]
name = "madato_cal"
version = "0.7.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
license = "MIT/Apache-2.0"
description = "XLS, ODS Support for the madato lib and command line"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice"]
include = [ "src/lib.js", "Cargo.toml" ]
edition = "2021"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
madato          = { path = "../madato/" }
calamine        = "0.24"
thiserror = "1.0.59"
