[package]
name = "madato_py"
version = "0.7.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
license = "MIT/Apache-2.0"
description = "Command Line Binary for madato"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice", "javascript", "wasm","csv"]
edition = "2021"

[lib]
name = "madato"
crate-type = ["cdylib"]

[dependencies]
madato          = { path = "../madato" }
madato_cal          = { path = "../madato_cal" }
pyo3 = { version = "0.21.2", features = ["extension-module", "generate-import-lib"] }

pythonize = "0.21.1"
