[package]
name = "madato_wasm"
version = "0.5.3"
authors = ["Ramon Buckland <ramon.buckland@inosion.com>"]
license = "MIT/Apache-2.0"
description = "JS API WASM Binding for madato"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice", "javascript", "wasm"]
exclude = [
    "test/*",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
madato          = { path = "../../madato" }
wasm-bindgen    = "0.2"
