[package]
name = "madato_wasm"
version = "0.7.0"
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
license = "MIT/Apache-2.0"
description = "JS API WASM Binding for madato"
readme  = "README.md"
repository = "https://github.com/inosion/madato"
keywords = ["markdown","excel","yaml","tables","openoffice", "csv", "javascript", "wasm"]
exclude = [
    "test/*",
]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
madato          = { path = "../madato" }
wasm-bindgen    = "0.2"
